[package]
name = "thompson_rust_os"
version = "0.1.0"
edition = "2021"
authors = ["Bradley Thompson <bradlet2@pdx.edu>"]

[dependencies]
bootloader = "0.9.23"
volatile = "0.2.6"
spin = "0.5.2"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
x86_64 = "0.14.2"

# Alter bootimage runner execution in test context; specify a port
# that, when written to, causes QEMU to exit.
[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
test-success-exit-code = 21
# Note: Specified this as a 10 in binary `0b1010`, yet it is sent as 21 for some reason.
