[package]
name = "thompson_rust_os"
version = "0.1.0"
edition = "2021"
authors = ["Bradley Thompson <bradlet2@pdx.edu>"]

[dependencies]
bootloader = "0.9.23"
volatile = "0.2.6"
spin = "0.5.2"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
x86_64 = "0.14.2"
uart_16550 = "0.2.0"

# Alter bootimage runner execution in test context; specify a port
# that, when written to, causes QEMU to exit.
[package.metadata.bootimage]
test-args = [
	"-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
	"-serial", "stdio",
	"-display", "none"
]
test-success-exit-code = 21

# Configure should_panic example test to not use a test harness.
[[test]]
name = "should_panic_example"
harness = false

[[test]]
name = "should_panic_on_double_fault"
harness = false